# Simone-MCP

./: .coverage  .gitignore  A2A-CARD.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  Dockerfile  INSTALL.md  README.md  SECURITY.md  agent.json  install.sh  llms-full.txt  llms.txt  package-lock.json  package.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ceo-audit.yml  ci.yml
.gitnexus/: meta.json
.opencode/: PCPM-AGENTS.md  opencode.json  pcpm-config.json
.opencode/hooks/: pcpm-after-run.sh  pcpm-before-run.sh
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
.well-known/: agent-card.json  agent.json
docs/: architecture.md
landing-worker/src/: index.js
migrations/: tool-mappings.yaml
scripts/: integrate_opencode.py  migrate-opencode.py  setup.sh
src/: __init__.doc.md  __init__.py  cli.doc.md  cli.py  main.doc.md  main.py  mcp_server.doc.md  mcp_server.py  runtime.ts
src/simone_mcp/: __init__.doc.md  __init__.py  a2a_handler.doc.md  a2a_handler.py  cli.doc.md  cli.py  core.doc.md  core.py  correlation.doc.md  correlation.py  graphify_service.doc.md  graphify_service.py  http_app.doc.md  http_app.py  hybrid_memory.doc.md  hybrid_memory.py  mcp_stdio.doc.md  mcp_stdio.py  protocol.doc.md  protocol.py  schemas.doc.md  schemas.py  server.doc.md  server.py
src/simone_mcp/cli_shims/: __init__.py  simone_build_agent_card.py  simone_dashboard.py  simone_execute_action.py  simone_find_references.py  simone_insert_after_symbol.py  simone_process_lsp_task.py  simone_project_overview.py  simone_replace_symbol_body.py  simone_symbol_search.py
tests/: test_edge_cases.py  test_simone_mcp.doc.md  test_simone_mcp.py  test_simone_mcp_v2.py
