[project]
name = "simone-mcp"
version = "0.2.0"
description = "Simone MCP - State-of-the-art MCP 2.0 code worker with hybrid memory"
authors = [{name = "Delqhi", email = "info@zukunftsorientierte-energie.de"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pygls>=1.3.1",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "libcst>=1.3.0",
    "jedi>=0.19.1",
    "qdrant-client>=1.9.0",
    "neo4j>=5.24.0",
    "httpx>=0.27.0",
    "authlib>=1.3.2",
    "pyjwt>=2.9.0",
    "cryptography>=43.0.0",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[project.scripts]
simone-cli = "simone_mcp.cli:main"
# v0.2.0 — Standalone CLI shims for the 9 public MCP tools. Lets shell
# users and sub-agents invoke Simone's code-analysis tools without
# spinning up the FastAPI/MCP server. Each shim is a thin argparse
# wrapper around the corresponding function in simone_mcp.core.
simone-symbol-search = "simone_mcp.cli_shims.simone_symbol_search:main"
simone-find-references = "simone_mcp.cli_shims.simone_find_references:main"
simone-replace-symbol-body = "simone_mcp.cli_shims.simone_replace_symbol_body:main"
simone-insert-after-symbol = "simone_mcp.cli_shims.simone_insert_after_symbol:main"
simone-project-overview = "simone_mcp.cli_shims.simone_project_overview:main"
simone-execute-action = "simone_mcp.cli_shims.simone_execute_action:main"
simone-process-lsp-task = "simone_mcp.cli_shims.simone_process_lsp_task:main"
simone-dashboard = "simone_mcp.cli_shims.simone_dashboard:main"
simone-build-agent-card = "simone_mcp.cli_shims.simone_build_agent_card:main"

[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simone_mcp"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
